Actions
Bug #13087
closedzfs: zfs_ereport_post() and zfs_ereport_start() return values are ignored
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
use (void) to silence analyzers.
Reviewed-by: Ryan Moeller <ryan@iXsystems.com>
Reviewed-by: Brian Behlendorf <behlendorf1@llnl.gov>
Signed-off-by: Toomas Soome <tsoome@me.com>
Closes #10857
smatch errors:
/code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/fs/zfs/zio.c:483 zio_decrypt() error: unchecked function return 'zfs_ereport_post' /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/fs/zfs/zio.c:1988 zio_suspend() error: unchecked function return 'zfs_ereport_post' /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/fs/zfs/zio.c:4259 zio_done() error: unchecked function return 'zfs_ereport_post' /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/fs/zfs/zio.c:4273 zio_done() error: unchecked function return 'zfs_ereport_post' /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/fs/zfs/zio.c:4284 zio_done() error: unchecked function return 'zfs_ereport_post' /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/fs/zfs/vdev.c:1362 vdev_probe_done() error: unchecked function return 'zfs_ereport_post' /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/fs/zfs/vdev.c:1714 vdev_open() error: unchecked function return 'zfs_ereport_post' /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/fs/zfs/vdev.c:4388 vdev_set_state() error: unchecked function return 'zfs_ereport_post' /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/fs/zfs/zfs_fm.c:739 zfs_ereport_start_checksum() error: uncheckedfunction return 'zfs_ereport_start' /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/fs/zfs/vdev_raidz.c:2078 raidz_checksum_error() error: unchecked function return 'zfs_ereport_post_checksum' /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/fs/zfs/spa.c:2393 spa_load() error: unchecked function return 'zfs_ereport_post' /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/fs/zfs/vdev_indirect.c:1386 vdev_indirect_checksum_error() error:unchecked function return 'zfs_ereport_post_checksum' /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/fs/zfs/vdev_indirect.c:1464 vdev_indirect_all_checksum_errors() error: unchecked function return 'zfs_ereport_post_checksum' /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/fs/zfs/arc.c:2541 arc_untransform() error: unchecked function return 'zfs_ereport_post' /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/fs/zfs/arc.c:5804 arc_read_done() error: unchecked function return 'zfs_ereport_post' /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/fs/zfs/arc.c:6062 arc_read() error: unchecked function return 'zfs_ereport_post' /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/fs/zfs/spa_config.c:284 spa_write_cachefile() error: unchecked function return 'zfs_ereport_post'
Testing done: build/install/boot with illumos; plus openzfs test VM's running zfs tests.
Updated by Toomas Soome over 1 year ago
- Subject changed from zfs: zio_ereport_post() and zio_ereport_start() return values are ignored to zfs: zfs_ereport_post() and zfs_ereport_start() return values are ignored
Updated by Electric Monk over 1 year ago
- Status changed from New to Closed
- % Done changed from 90 to 100
git commit 9b0881404678e5235132f9320785c3f5ce6e71f6
commit 9b0881404678e5235132f9320785c3f5ce6e71f6 Author: Toomas Soome <tsoome@me.com> Date: 2020-09-05T15:01:41.000Z 13087 zfs: zfs_ereport_post() and zfs_ereport_start() return values are ignored Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Patrick Mooney <pmooney@pfmooney.com> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions