13087 zfs: zfs_ereport_post() and zfs_ereport_start() return values are ignored Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Patrick Mooney <pmooney@pfmooney.com> Approved by: Robert Mustacchi <rm@fingolfin.org>